--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,6 @@ typing_extensions==4.15.0
 uvicorn==0.38.0
 watchfiles==1.1.1
 websockets==15.0.1
+openai>=1.60.0
+httpx>=0.27.0
+python-multipart>=0.0.9
